fix: avatar overflow

--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,6 @@ body {
 
 .info--avatar {
   padding-right: 25px;
-  width: 128px;
-  height: 128px;
 }
 
 .info--avatar img {
